--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,17 +6,19 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [class.newBG]="state">
 <div class="image">
 <img class="firstPageImage" src="../../assets/sampleImage.jpg" alt="First page">
 </div>
-</ion-content>
 
+
+<img src="{{ screen }}" *ngIf="state">
+</ion-content>
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
       <ion-button (click)= feedbackClicked()>Feedback</ion-button>
-      <ion-button>Reset image</ion-button>
+      <ion-button (click)= resetClicked()>Reset</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
