--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -9,6 +9,7 @@
 ion-content {
   background:#233B3B !important;
   text-align:center;
+  overflow: auto;
 }
 .newBG {
   background:#4C6E6E !important;
