admin page lists all canvas IDs

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
-      <ion-button (click)= realFeedbackClicked()>Real Feedback</ion-button>
+      <ion-button (click)= realFeedbackClicked()>Real Feedback :)</ion-button>
       <ion-button (click)= feedbackClicked()>Feedback</ion-button>
       <ion-button (click)= resetClicked()>Reset</ion-button>
       <ion-button (click)="clear()">Clear</ion-button>
