Json and SVG save to image local storage
data service handles these and incorporates with the image id and the feedback

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,10 +25,8 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
-      <ion-button (click)= realFeedbackClicked()>Real Feedback :)</ion-button>
       <ion-button (click)= feedbackClicked()>Feedback</ion-button>
-      <ion-button (click)= resetClicked()>Reset</ion-button>
-      <ion-button (click)="clear()">Clear</ion-button>
+      <ion-button (click)= clear()>Reset</ion-button>
       <ion-button (click)="changeColour('red')">R</ion-button>
       <ion-button (click)="changeColour('blue')">B</ion-button>
       <ion-button (click)="changeColour('green')">G</ion-button>
