removing ionic (partial) + saving canvas and feedback working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+<div class='container'>
+  <div class="top-bar">
+<h1>Hands-on Reading</h1>
+  </div>
+</div>
+    <router-outlet></router-outlet>
