--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,8 +1,8 @@
-<ion-content>
+<div class="container">
   <div *ngIf="allCanvas">
-<p>Saved canvas</p>
+<p>Click on an ID to view canvas and feedback:</p>
   <div *ngFor="let canvas of allCanvas">
     <p (click) = "canvasClicked(canvas._id)">{{canvas._id}}</p>
   </div>
   </div>
-</ion-content>
+</div>
