--- a/src/app/view-result/view-result.component.html
+++ b/src/app/view-result/view-result.component.html
@@ -1,6 +1,6 @@
-<ion-content>
-  <div *ngIf="canvas && feedback">
-    <p>Canvas: {{canvas._id}} (insert image)</p>
-    <p>Feedback: {{feedback.text}}</p>
+<div class="container">
+  <div *ngIf="canvasObject">
+    <p>ID: {{canvasObject._id}}</p>
+    <p>Feedback: {{canvasObject.text}}</p>
   </div>
-</ion-content>
+</div>
