removing ionic (partial) + saving canvas and feedback working

--- a/src/app/view-result/view-result.component.html
+++ b/src/app/view-result/view-result.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div *ngIf="canvasObject">
     <p>ID: {{canvasObject._id}}</p>
-    <p>Feedback: {{canvasObject.text}}</p>
+<!--    todo render image-->
+    <p>Feedback: {{canvasObject.feedbackText}}</p>
   </div>
 </div>
