add labels to buttons

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,3 +7,21 @@
 button.non-click {
   cursor: default;
 }
+
+
+.btn-group {
+  margin-left: 30px;
+}
+
+.btn-red {
+  background: red;
+}
+
+.btn-green {
+  background: green;
+}
+
+.btn-black {
+  background: black;
+  color: white;
+}
