--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,12 +22,21 @@
 
   <div class="btn-group" role="group">
       <button class="btn btn-primary" type="button" (click)= feedbackClicked()>Feedback</button>
-      <button class="btn btn-primary" type="button" (click)= clear()>Reset</button>
-      <button class="btn btn-primary" type="button" (click)="changeColour('red')">R</button>
+      <button class="btn btn-primary" type="button" (click)= clear()>Reset
+      </button>
+  </div>
+      <div class="btn-group" role="group">
+          <button class="non-click">Colour:</button>
+      <button class="btn btn-red" type="button" (click)="changeColour('red')">R</button>
       <button class="btn btn-primary" type="button" (click)="changeColour('blue')">B</button>
-      <button class="btn btn-primary" type="button"(click)="changeColour('green')">G</button>
-      <button class="btn btn-primary" type="button"(click)="changeColour('black')">Bl</button>
+      <button class="btn btn-green" type="button"(click)="changeColour('green')">G</button>
+      <button class="btn btn-black" type="button"(click)="changeColour('black')">Bl</button>
+  </div>
+
+    <div class="btn-group" role="group">
+      <button class="non-click">Size:</button>
       <button class="btn btn-primary" type="button"(click)="decreaseWidth()">-</button>
+
       <button class="non-click" >{{canvas.freeDrawingBrush.width}}</button>
       <button class="btn btn-primary" type="button"(click)="increaseWidth()">+</button>
   </div>
