--- a/src/app/view-result/view-result.component.html
+++ b/src/app/view-result/view-result.component.html
@@ -1,7 +1,12 @@
 <div class="container">
   <div *ngIf="canvasObject">
     <p>ID: {{canvasObject._id}}</p>
-    <p>Feedback: {{canvasObject.feedbackText}}</p>
+    <p>Q1: {{canvasObject.q1Check}}, {{canvasObject.q1Text}}</p>
+    <p>Q2: {{canvasObject.q2Check}}, {{canvasObject.q2Text}}</p>
+    <p>Q3: {{canvasObject.q3Check}}, {{canvasObject.q3Text}}</p>
+    <p>Device: {{canvasObject.device}}</p>
+    <p>Job: {{canvasObject.job}}</p>
+
   </div> 
 
   <div>
