--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,26 +20,40 @@
   <!--<img src="{{ screen }}" *ngIf="state">-->
 
 
-  <div class="btn-group" role="group">
-      <button class="btn btn-primary" type="button" (click)= feedbackClicked()>Feedback</button>
-      <button class="btn btn-primary" type="button" (click)= clear()>Reset
+
+
+      <button class="btn btn-secondary" type="button" (click)= clear()>Reset
       </button>
-  </div>
-      <div class="btn-group" role="group">
-          <button class="non-click">Colour:</button>
-      <button class="btn btn-red" type="button" (click)="changeColour('red')">R</button>
-      <button class="btn btn-primary" type="button" (click)="changeColour('blue')">B</button>
-      <button class="btn btn-green" type="button"(click)="changeColour('green')">G</button>
-      <button class="btn btn-black" type="button"(click)="changeColour('black')">Bl</button>
-  </div>
+
+<!--      <div class="btn-group" role="group">-->
+<!--          <button class="btn-secondary non-click">Pen colour:</button>-->
+<!--      <button class="btn btn-red" type="button" (click)="changeColour('red')">R</button>-->
+<!--      <button class="btn btn-blue" type="button" (click)="changeColour('blue')">B</button>-->
+<!--      <button class="btn btn-green" type="button"(click)="changeColour('green')">G</button>-->
+<!--      <button class="btn btn-black" type="button"(click)="changeColour('black')">Bl</button>-->
+<!--  </div>-->
+
+    <div class="btn-group mr-3">
+        <button type="button" class="btn btn-secondary">Pen colour</button>
+        <div class="btn-group" ngbDropdown role="group" >
+            <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle></button>
+        <div ngbDropdownMenu class="dropdown-menu">
+            <button class="btn btn-red btn-small" ngbDropdownItem (click)="changeColour('red')">R</button>
+            <button class="btn btn-blue btn-small" ngbDropdownItem (click)="changeColour('blue')">B</button>
+            <button class="btn btn-green btn-small" ngbDropdownItem (click)="changeColour('green')">G</button>
+            <button class="btn btn-black btn-small" ngbDropdownItem (click)="changeColour('black')">Bl</button>
+        </div>
+    </div>
+    </div>
+
 
     <div class="btn-group" role="group">
-      <button class="non-click">Size:</button>
-      <button class="btn btn-primary" type="button"(click)="decreaseWidth()">-</button>
+      <button class="btn-secondary non-click">Pen size:</button>
+      <button class="btn btn-secondary" type="button"(click)="decreaseWidth()">-</button>
 
       <button class="non-click" >{{canvas.freeDrawingBrush.width}}</button>
-      <button class="btn btn-primary" type="button"(click)="increaseWidth()">+</button>
+      <button class="btn btn-secondary" type="button"(click)="increaseWidth()">+</button>
   </div>
-
+    <button class="btn btn-secondary" type="button" (click)= feedbackClicked()>Feedback</button>
 
 </div>
