--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,18 +10,44 @@ button.non-click {
 
 
 .btn-group {
-  margin-left: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .btn-red {
   background: red;
+  border-color: gray;
+  color: white;
 }
 
 .btn-green {
   background: green;
+  border-color: gray;
+  color: white;
+}
+
+.btn-blue {
+  background: blue;
+  border-color: gray;
+  color: white;
 }
 
 .btn-black {
   background: black;
   color: white;
+  border-color: white;
+}
+
+
+body{
+  background-color: black !important;
+}
+
+.btn-small {
+  width: 10px;
+}
+
+.dropdown-menu.show {
+  background: transparent;
+  width: 10px;
 }
