--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class='container'>
-  <div class="top-bar ">
-<h1>Hands-on Reading</h1>
-  </div>
-</div>
+<!--<div class='container'>-->
+<!--  <div class="top-bar ">-->
+<!--<h1>Hands-on Reading</h1>-->
+<!--  </div>-->
+<!--</div>-->
     <router-outlet></router-outlet>
