add createdAt time

--- a/src/app/view-result/view-result.component.html
+++ b/src/app/view-result/view-result.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div *ngIf="canvasObject">
     <p>ID: {{canvasObject._id}}</p>
+    <p>Created at: {{canvasObject.createdAt}}</p>
     <p>Q1: {{canvasObject.q1Check}}, {{canvasObject.q1Text}}</p>
     <p>Q2: {{canvasObject.q2Check}}, {{canvasObject.q2Text}}</p>
     <p>Q3: {{canvasObject.q3Check}}, {{canvasObject.q3Text}}</p>
