icon for colour picker

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,9 +1,16 @@
-<h2 mat-dialog-title>Welcome</h2>
+<h2 mat-dialog-title>Hands On Reading</h2>
 
 <mat-dialog-content >
   
-<p>Hello</p>
- 
+<p>Hands on Reading challenges how we interact with texts</p>
+<p>After closing this window, please use the pen with the digital canvas <br/>
+    When you feel ready, click the feedback button to answer a few questions on your experience <br/>
+    Then submitting the feedback will send us your answers and your edited canvas </p>
+
+<p> Clicking 'Reset' does not save or send us the edited canvas <br/>
+    There is also no way for you to pause and resume at present</p>
+
+<p> If you do not wish to share your edited canvas or feedback with us, go back to the canvas page and click reset</p>
 </mat-dialog-content>
 
 <mat-dialog-actions>
