--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
 <!--    </div>-->
 <!--    </div>-->
 
-    <input [value]="message" [(colorPicker)]="colour" [cpOKButton]=true [cpCancelButton]=true [style.background]="colour"  (colorPickerSelect)="changeColour(colour)"/>
+    <button class="btn btn-secondary" [(colorPicker)]="colour" [cpOKButton]=true [cpCancelButton]=true [style.background]="colour"  (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25"/></button>
 
     <div class="btn-group" role="group">
       <button class="btn btn-secondary non-click">Pen size:</button>
