add text and logos to dialog box

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,18 +1,19 @@
-<h2 mat-dialog-title>Hands On Reading</h2>
+<h2 mat-dialog-title>Hands-On Reading</h2>
 
 <mat-dialog-content >
   
-<p>Hands on Reading challenges how we interact with texts</p>
-<p>After closing this window, please use the pen with the digital canvas <br/>
-    When you feel ready, click the feedback button to answer a few questions on your experience <br/>
-    Then submitting the feedback will send us your answers and your edited canvas </p>
+<p>Welcome to Hands-On Reading. Made as part of an AHRC project at Newcastle University</p>
+    <p>After closing this window, please draw on the digital canvas. This works best with a tablet and pen if you have one. </p>
 
-<p> Clicking 'Reset' does not save or send us the edited canvas <br/>
-    There is also no way for you to pause and resume at present</p>
+    <p>When you feel ready, click the feedback button to answer a few questions on your experience. This app examines how we handwrite and how we read, so please note that your edited canvas will be automatically sent to us when you hit "feedback". </p>
 
-<p> If you do not wish to share your edited canvas or feedback with us, go back to the canvas page and click reset</p>
+<p> Clicking 'Reset' does not save or send us the edited canvas. <br/>
+    There is also no way for you to pause and resume.</p>
+
+<p> If you do not wish to share your edited canvas or feedback with us, simply click reset.</p>
+    <img src="./assets/AHRC.png" height="50"><img class="NUImage" src="./assets/NU.png" height="50">
 </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button class="mat-raised-button mat-primary" (click)="close()">Close</button>
+    <button class="btn btn-secondary" (click)="close()">Close</button>
 </mat-dialog-actions>
