--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,10 +1,13 @@
 
 <div class="container">
+    <div class="intro">
+<h4>Thank you for using the app. We'd be grateful for your feedback for our research.</h4>
+</div>
 
-<div class="form-group">
+    <div class="form-group">
 
 <div class="question">
-    <label for="q1Text">Question 1</label>
+    <label for="q1Text">Did you enjoy using the app? </label>
     <div class="radio-btns">
     <div class="form-check form-check-inline" >
         <input class="form-check-input" type="radio" id="q1radioYes" name="q1Radio" value=true [(ngModel)]="q1Choice">
@@ -15,13 +18,13 @@
         <label class="form-check-label" for="q1RadioNo">No</label>
     </div>
     </div>
-    <p>Tell us more...</p>
-     <textarea class="form-control" id="q1text" rows="3" name="textarea-field" required
+    <p>Please tell us more...</p>
+     <textarea class="form-control" id="q1text" rows="2" name="textarea-field" required
             [(ngModel)]="q1Text"></textarea>
 </div>
 
     <div class="question">
-        <label for="q1Text">Question 2</label>
+        <label for="q1Text">Did the app make you think differently about handwriting? </label>
         <div class="radio-btns">
         <div class="form-check form-check-inline" >
             <input class="form-check-input" type="radio" id="q2radioYes" name="q2Radio" value=true [(ngModel)]="q2Choice">
@@ -32,13 +35,13 @@
             <label class="form-check-label" for="q2RadioNo">No</label>
         </div>
         </div>
-        <p>Tell us more...</p>
-        <textarea class="form-control" id="q2text" rows="3" name="textarea-field" required
+        <p>Please tell us more...</p>
+        <textarea class="form-control" id="q2text" rows="2" name="textarea-field" required
                   [(ngModel)]="q2Text"></textarea>
     </div>
 
     <div class="question">
-        <label for="q1Text">Question 3</label>
+        <label for="q1Text">Did the app change the way you read the text?</label>
         <div class="radio-btns">
         <div class="form-check form-check-inline" >
             <input class="form-check-input" type="radio" id="q3radioYes" name="q3Radio" value=true [(ngModel)]="q3Choice">
@@ -49,22 +52,58 @@
             <label class="form-check-label" for="q3RadioNo">No</label>
         </div>
         </div>
-        <p>Tell us more...</p>
-        <textarea class="form-control" id="q3text" rows="3" name="textarea-field" required
+        <p>Please tell us more...</p>
+        <textarea class="form-control" id="q3text" rows="2" name="textarea-field" required
                   [(ngModel)]="q3Text"></textarea>
     </div>
 
 
+        <div class="question">
+            <label for="deviceText">What device did you use?</label>
+            <div class="radio-btns">
+                <div class="form-check form-check-inline" >
+                    <input class="form-check-input" type="radio" id="iPad" name="device" value="iPad/tablet" [(ngModel)]="device">
+                    <label class="form-check-label" for="iPad">iPad or Tablet</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="tablet" name="device" value="Laptop/PC" [(ngModel)]="device">
+                    <label class="form-check-label" for="tablet">Laptop or Desktop PC</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="laptop" name="device" value="Mobile" [(ngModel)]="device">
+                    <label class="form-check-label" for="tablet">Mobile phone</label>
+                </div>
+            </div>
+            <p>Other device type:</p>
+            <textarea class="form-control" id="deviceText" rows="1" name="textarea-field" required
+                      [(ngModel)]="deviceText"></textarea>
+        </div>
 
+        <div class="question">
+            <label for="jobText">What is your occupation?</label>
+            <div class="radio-btns">
+                <div class="form-check form-check-inline" >
+                    <input class="form-check-input" type="radio" id="academic" name="job" value="Academic" [(ngModel)]="job">
+                    <label class="form-check-label" for="academic">Academic</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="creative" name="job" value="Creative Practitioner" [(ngModel)]="device">
+                    <label class="form-check-label" for="creative">Creative Practitioner</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="calligrapher" name="job" value="Calligrapher" [(ngModel)]="device">
+                    <label class="form-check-label" for="calligrapher">Calligrapher</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="teacher" name="job" value="Teacher" [(ngModel)]="device">
+                    <label class="form-check-label" for="teacher">Teacher</label>
+                </div>
+            </div>
+            <p>Other occupation:</p>
+            <textarea class="form-control" id="jobText" rows="1" name="textarea-field" required
+                      [(ngModel)]="jobText"></textarea>
+        </div>
 
-
-    <label for="device">Are you using a tablet or computer?</label>
-    <textarea class="form-control" id="device" rows="1" name="textarea-field" required
-              [(ngModel)]="device"></textarea>
-
-    <label for="device">What is your occupation?</label>
-    <textarea class="form-control" id="job" rows="1" name="textarea-field" required
-              [(ngModel)]="job"></textarea>
 
 
 
