--- a/src/app/view-result/view-result.component.html
+++ b/src/app/view-result/view-result.component.html
@@ -1,13 +1,15 @@
 <div class="container">
+
   <div *ngIf="canvasObject">
+    <div class="results">
     <p>ID: {{canvasObject._id}}</p>
     <p>Created at: {{canvasObject.createdAt}}</p>
-    <p>Q1: {{canvasObject.q1Check}}, {{canvasObject.q1Text}}</p>
-    <p>Q2: {{canvasObject.q2Check}}, {{canvasObject.q2Text}}</p>
-    <p>Q3: {{canvasObject.q3Check}}, {{canvasObject.q3Text}}</p>
-    <p>Device: {{canvasObject.device}}</p>
-    <p>Job: {{canvasObject.job}}</p>
-
+    <p>Did you enjoy using the app? {{canvasObject.q1Check}}, {{canvasObject.q1Text}}</p>
+    <p>Did the app make you think differently about handwriting? {{canvasObject.q2Check}}, {{canvasObject.q2Text}}</p>
+    <p>Did the app change the way you read the text? {{canvasObject.q3Check}}, {{canvasObject.q3Text}}</p>
+    <p>Device: {{canvasObject.device}}    {{canvasObject.deviceText}}</p>
+    <p>Job: {{canvasObject.job}}  {{ canvasObject.jobText}}</p>
+  </div>
   </div> 
 
   <div>
@@ -15,4 +17,4 @@
   </div>
 
   
-<div>
+</div>
