--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -11,6 +11,8 @@
     There is also no way for you to pause and resume.</p>
 
 <p> If you do not wish to share your edited canvas or feedback with us, simply click reset.</p>
+    <p>Credits: Matthew Coneys, Kate Court, James Cummings, Fiona Galston, Aditi Nafde, and Tiago Sousa Garcia </p>
+
     <img src="./assets/AHRC.png" height="50"><img class="NUImage" src="./assets/NU.png" height="50">
 </mat-dialog-content>
 
