--- a/src/app/view-result/view-result.component.html
+++ b/src/app/view-result/view-result.component.html
@@ -16,5 +16,7 @@
     <canvas id="viewCanvas" width="700" height="900"></canvas>
   </div>
 
-  
+  <div class="btn-group" role="group">
+    <button class="btn btn-secondary" type="button" (click)= downloadJpg()>Download Canvas</button>
+  </div>
 </div>
