add nginx from translations

--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -9,20 +9,20 @@
 <div class="question">
     <label for="q1Text">Did you enjoy using the app? </label>
 
-<!--    <div class="radio-btns">-->
-<!--    <div class="form-check form-check-inline" >-->
-<!--        <input class="form-check-input" type="radio" id="q1radioYes" name="q1Radio" value="yes" [(ngModel)]="q1Check">-->
-<!--        <label class="form-check-label" for="q1RadioYes">Yes</label>-->
-<!--    </div>-->
-<!--    <div class="form-check form-check-inline">-->
-<!--        <input class="form-check-input" type="radio" id="q1RadioNo" name="q1Radio" value="no" [(ngModel)]="q1Check">-->
-<!--        <label class="form-check-label" for="q1RadioNo">No</label>-->
-<!--    </div>-->
-<!--        <div class="form-check form-check-inline">-->
-<!--            <input class="form-check-input" type="radio" id="q1RadioUnsure" name="q1Radio" value="unsure" [(ngModel)]="device">-->
-<!--            <label class="form-check-label" for="q1RadioUnsure">Unsure</label>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="radio-btns">
+    <div class="form-check form-check-inline" >
+        <input class="form-check-input" type="radio" id="q1radioYes" name="q1Radio" value="yes" [(ngModel)]="q1Check">
+        <label class="form-check-label" for="q1RadioYes">Yes</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" id="q1RadioNo" name="q1Radio" value="no" [(ngModel)]="q1Check">
+        <label class="form-check-label" for="q1RadioNo">No</label>
+    </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" id="q1RadioUnsure" name="q1Radio" value="unsure" [(ngModel)]="device">
+            <label class="form-check-label" for="q1RadioUnsure">Unsure</label>
+        </div>
+    </div>
     <p>Please tell us more...</p>
      <textarea class="form-control" id="q1text" rows="2" name="textarea-field"
             [(ngModel)]="q1Text"></textarea>
