--- a/src/app/feedback/feedback.component.scss
+++ b/src/app/feedback/feedback.component.scss
@@ -11,3 +11,16 @@
 .intro {
   margin-top:20px;
 }
+
+.error {
+  color: red;
+}
+
+.required {
+  color: indianred;
+}
+
+hr {
+  border-color: white;
+
+}
