--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
   <!--<img src="{{ screen }}" *ngIf="state">-->
 
 
-
+<div class="buttons">
     <div class="btn-group" role="group">
       <button class="btn btn-secondary" type="button" (click)= clear()>Reset</button>
     </div>
@@ -47,5 +47,5 @@
       <button class="btn btn-secondary" type="button"(click)="increaseWidth()">+</button>
   </div>
     <button class="btn btn-secondary" type="button" (click)= feedbackClicked()>Feedback</button>
-
+</div>
 </div>
